@@ -1,3 +1,8 @@
+2009-03-03  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* typing-break/drwright.c: Revert change to GtkUIManager. It broke
+	string freeze. Bug #572325
+
 2009-03-02  Bastien Nocera  <hadess@hadess.net>
 
 	* font-viewer/Makefile.am:
